--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
-title: kakao 기술 블로그
-email: opensource@kakaocorp.com
+title: 문성완 기술 블로그
+email: sungwan.moon@hanmi.com
 description: |
   Connect Everything 새로운 연결, 새로운 세상.
   연결의 혁신으로 세상은 더욱 가깝고 새로워진다고 카카오는 믿습니다.
-baseurl: ''
-url: 'http://tech.kakao.com'
+baseurl: 'moonsungwan.github.io'
+url: 'moonsungwan.github.io'
 timezone: Asia/Seoul 
 
-repository: kakao/kakao.github.io
+repository: moonsungwan.github.io
 
 permalink: /:year/:month/:day/:title/
 
